name:                deploy-lock
version:             0.0.0
synopsis:            Brrrrrr
license:             GPL
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
category:            Silly
build-type:          Simple
cabal-version:       >= 1.8
data-dir:            data

executable deploy-lock
  main-is:           deploy-lock.hs

  build-depends:     base                 >= 4 && < 5
                   , bytestring           >= 0.10
                   , containers           >= 0.5
                   , snap-core            >= 0.9
                   , snap-server          >= 0.9
                   , unordered-containers >= 0.2
                   , safe                 >= 0.3
                   , filepath             >= 1.3
                   , blaze-html           >= 0.7
                   , snap-blaze           >= 0.2
                   , base64-bytestring    >= 1.0
                   , DRBG                 >= 0.5
                   , crypto-api           >= 0.13
                   , transformers         >= 0.3

  ghc-options:       -threaded -Wall -rtsopts -with-rtsopts=-T
  ghc-prof-options:  -auto-all
